GNOME Bugzilla – Bug 785062
Fix licensing issues
Last modified: 2018-02-01 19:05:35 UTC
This additionally adds SPDX tags to aid license detection by tools.
Created attachment 355818 [details] [review] libnautilus-extension: relicense files under GPLv3+
Created attachment 355820 [details] [review] meson.build: change project version
Created attachment 355821 [details] [review] tests: relicense under GPLv3+
Created attachment 355825 [details] [review] eel: relicense under GPLv3+
Created attachment 355826 [details] [review] window: change license to GPLv3+ in the about dialog
Created attachment 355827 [details] [review] desktop: relicense files under GPLv3+
Review of attachment 355818 [details] [review]: Looks good
Review of attachment 355820 [details] [review]: aaah yes, I forgot. Thanks.
Review of attachment 355821 [details] [review]: +1
Review of attachment 355825 [details] [review]: I would instead remove all eel, but ok for now :P :P
Review of attachment 355826 [details] [review]: what a shitty job I did relicensing nautilus, don't you think? :/ I'm lucky you are around!
Review of attachment 355827 [details] [review]: I would rather remove the desktop, but it's okay for now :P :P
Attachment 355826 [details] pushed as 57ee2b8 - window: change license to GPLv3+ in the about dialog
Attachment 355820 [details] pushed as 9d0fae6 - meson.build: change project license version
Created attachment 357094 [details] [review] Add license to libnautilus-extension
Review of attachment 357094 [details] [review]: Yes!
Review of attachment 357094 [details] [review]: .
Comment on attachment 357094 [details] [review] Add license to libnautilus-extension Attachment 357094 [details] pushed as 767c7ad - Add license to libnautilus-extension