window: change license to GPLv3+ in the about dialog

https://bugzilla.gnome.org/show_bug.cgi?id=785062